# WinScrape-Studio

./: .gitignore  Cargo.toml  app.manifest
src/: api.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs
src/config/: mod.rs
src/core/: job_manager.rs  mod.rs  orchestrator.rs  pipeline.rs
src/dsl/: generator.rs  mod.rs  parser.rs  validator.rs  validator_final.rs  validator_fixed.rs
src/export/: csv_exporter.rs  json_exporter.rs  mod.rs  parquet_exporter.rs  xlsx_exporter.rs
src/i18n/: mod.rs
src/llm/: mod.rs  processor.rs  prompts.rs
src/performance/: metrics.rs  mod.rs  monitor.rs  optimizer.rs
src/scraper/: browser.rs  http_client.rs  mod.rs  rate_limiter.rs  robots.rs  user_agent.rs
src/security/: domain_whitelist.rs  input_validator.rs  mod.rs  output_filter.rs
src/storage/: cache.rs  migrations.rs  mod.rs
src/ui/: chat.rs  components.rs  icon_manager.rs  mod.rs  results_viewer.rs  state.rs  theme.rs  windows_app.rs  windows_components.rs  windows_launcher.rs  windows_theme.rs  windows_ui.rs
src/utils/: crypto_utils.rs  file_utils.rs  mod.rs  string_utils.rs  validation_utils.rs
