[package]
name = "winscrape-studio"
version = "0.1.0"
edition = "2021"
authors = ["pavanepour-k <pavanepour@outlook.com>"]
description = "Natural language to web scraping automation tool"
license = "MIT"
repository = "https://github.com/pavanepour-k/WinScrape-Studio"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Web framework (optional local API)
actix-web = { version = "4.4", optional = true }
actix-rt = { version = "2.9", optional = true }

# HTTP client and scraping
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "stream"] }
scraper = "0.18"
html5ever = "0.26"
url = "2.5"

# Browser automation (optional)
playwright = { version = "0.0.20", optional = true }

# UI Framework
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }
egui_extras = { version = "0.24", optional = true }

# LLM Integration (simplified for now)
tokenizers = "0.15"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Export formats
csv = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
async-trait = "0.1"
dashmap = "5.5"
arc-swap = "1.6"

# Cryptography and security
ring = "0.17"
base64 = "0.21"
sha2 = "0.10"

# Rate limiting and caching
governor = "0.6"
moka = { version = "0.12", features = ["future"] }

# Configuration
config = "0.14"
directories = "5.0"

# Additional utilities
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Windows-specific dependencies (required for eframe)
winapi = { version = "0.3", features = ["winbase", "winnt", "processthreadsapi", "handleapi", "synchapi", "fileapi", "winerror", "winuser", "windef", "wingdi", "wincon"] }

# Compression
flate2 = "1.0"

# Embedded resources
rust-embed = "8.0"

# HTML utilities
html-escape = "0.2"

# Serialization utilities
bincode = "1.3"
hex = "0.4"

# System monitoring
sysinfo = "0.30"
os_info = "3.0"

# Image processing
image = "0.24"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
md5 = "0.7"

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = ["ui", "http-only"]
ui = ["eframe", "egui", "egui_extras"]
browser = ["playwright"]
api = ["actix-web", "actix-rt"]
http-only = []
full = ["ui", "browser", "api"]

[[bin]]
name = "winscrape-studio"
path = "src/main.rs"

[[bin]]
name = "wss-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
